@@ -14,8 +14,6 @@ namespace irr
 namespace scene
 {
 
-	struct SViewFrustum;
-
 	//! Scene Node which is a (controlable) camera.
 	/** The whole scene will be
 	rendered from the cameras point of view. Because the ICameraScenNode
@@ -137,6 +135,25 @@ namespace scene
 		{
 			IsOrthogonal = orthogonal;
 		}
+
+		//! Sets the rotation speed
+		virtual void setRotateSpeed(const f32 speed) { };
+
+		//! Sets the movement speed
+		virtual void setMoveSpeed(const f32 speed) { };
+
+		//! Gets the rotation speed
+		virtual f32 getRotateSpeed()
+		{
+			return 0.0f;
+		}
+
+		// Gets the movement speed
+		virtual f32 getMoveSpeed()
+		{
+			return 0.0f;
+		}
+
 
 	private:
 
