@@ -34,6 +34,9 @@ public:
 	//! opens a file for read access
 	virtual IReadFile* createAndOpenFile(const c8* filename);
 
+	//! Creates an IReadFile interface for accessing memory like a file.
+	virtual IReadFile* createMemoryReadFile(void* memory, s32 len, const c8* fileName, bool deleteMemoryWhenDropped = false);
+
 	//! Opens a file for write access.
 	virtual IWriteFile* createAndWriteFile(const c8* filename, bool append=false);
 
